# plate-inspector

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  plate-inspector.ron
src/: main.rs
