[package]
name = "plate-inspector"
version = "0.3.2"
authors = ["Axel Pahl"]
edition = "2021"

description = "A visual inspector of Cell Painting plates. Creates a single image overview of all individual images for the given channel."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.0"
dirs = "4"
getopts = "0.2.21"
glob = "0.3.0"
image = "0.23"
imageproc = "0.22.0"
regex = "1.5.4"
ron = "0.7"
rusttype = "0.9.2"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
build-data = "0"

[profile.release]
strip = true